<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EarthMAX</string>
    
    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="reset_email_sent">Password reset email sent!</string>
    
    <!-- Events -->
    <string name="events">Events</string>
    <string name="create_event">Create Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Location</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="max_participants">Max Participants</string>
    <string name="select_category">Select Category</string>
    <string name="select_image">Select Image</string>
    <string name="join_event">Join Event</string>
    <string name="leave_event">Leave Event</string>
    <string name="event_full">Event Full</string>
    <string name="edit_event">Edit Event</string>
    <string name="search_events">Search events...</string>
    <string name="no_events_found">No events found</string>
    <string name="create_first_event">Create your first event!</string>
    
    <!-- Categories -->
    <string name="all_categories">All</string>
    <string name="cleanup">Cleanup</string>
    <string name="education">Education</string>
    <string name="planting">Planting</string>
    <string name="recycling">Recycling</string>
    <string name="conservation">Conservation</string>
    <string name="awareness">Awareness</string>
    
    <!-- General -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="map_view">Map View</string>
    <string name="loading">Loading...</string>
    <string name="error_occurred">An error occurred</string>
    <string name="try_again">Try Again</string>
    
    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="eco_points">Eco Points</string>
    <string name="events_joined">Events Joined</string>
    <string name="events_created">Events Created</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="sign_out">Sign Out</string>
</resources>